; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/linux-capture/extr_xcursor-xcb.c_xcb_xcursor_init.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/linux-capture/extr_xcursor-xcb.c_xcb_xcursor_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XCB_XFIXES_MAJOR_VERSION = common dso_local global i32 0, align 4
@XCB_XFIXES_MINOR_VERSION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @xcb_xcursor_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = call i32* @bzalloc(i32 4)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @XCB_XFIXES_MAJOR_VERSION, align 4
  %8 = load i32, i32* @XCB_XFIXES_MINOR_VERSION, align 4
  %9 = call i32 @xcb_xfixes_query_version_unchecked(i32* %6, i32 %7, i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @xcb_xfixes_query_version_reply(i32* %10, i32 %11, i32* null)
  %13 = call i32 @free(i32 %12)
  %14 = load i32*, i32** %3, align 8
  ret i32* %14
}

declare dso_local i32* @bzalloc(i32) #1

declare dso_local i32 @xcb_xfixes_query_version_unchecked(i32*, i32, i32) #1

declare dso_local i32 @free(i32) #1

declare dso_local i32 @xcb_xfixes_query_version_reply(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
